kubernetes/apps/monitoring/victoria-logs/app/victoria-logs-syslog-tcproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/tcproute_v1alpha2.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: victoria-logs-syslog
  namespace: monitoring
spec:
  parentRefs:
    - name: traefik-internal-gateway
      namespace: network
      sectionName: syslog
  rules:
    - backendRefs:
        - name: victoria-logs-server
          port: 514
          namespace: monitoring
